28,850 words - if chapter finished.

--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,7 @@ pip-log.txt
 /listings/.#dice_v5.js
 /listings/#dice_v5.js#
 /listings/greeting.js
+/listings/fireworks/.#fireworkShow.js
+/listings/fireworks/#fireworkShow.js#
+/listings/recipe3/.#greetPlayers_v1.js
+/listings/recipe3/#greetPlayers_v1.js#
