--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,16 @@
     <javac includeantruntime="false" srcdir="${src}" destdir="${build}"/>
   </target>
 
-  <target name="build-readme.md" depends="compile">
+  <target name="build-drone-ref" depends="compile">
+    <java classname="jscript" failonerror="true" fork="true" error="error.log" output="target/drone-api-reference.md">
+      <classpath>
+	<pathelement path="${build}"/>
+      </classpath>
+      <arg value="src/js/generateDroneAPIReference.js"/>
+    </java>
+  </target>
+
+  <target name="build-readme.md" depends="build-drone-ref,compile">
     <java classname="jscript" failonerror="true" fork="true" error="error.log" output="README.md">
       <classpath>
 	<pathelement path="${build}"/>
