56,514 words  - need to work on inheritance in recipes chapter.

--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,5 @@ pip-log.txt
 /listings/fireworks/#fireworkShow.js#
 /listings/recipe3/.#greetPlayers_v1.js
 /listings/recipe3/#greetPlayers_v1.js#
+*target/*
+*.#*
